<resources>
    <string name="app_name">TuYou2.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bottom_navgation_msg">消息</string>
    <string name="bottom_navgation_map">地图</string>
    <string name="bottom_navgation_circle">图友圈</string>

    <string name="map_bottom_no_more">没有更多附近的人了</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_attention">我关注的人</string>
    <string name="navigation_about">关于图友</string>
    <string name="navigation_setting">设置</string>
    <string name="login_other_login">---------- 第三方登录 ----------</string>
    <string name="login_sina">新浪登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_btn_login">登 录</string>
    <string name="login_register">免费注册</string>
    <string name="login_clear_all">清空所有</string>
    <string name="login_logining">正在登录...</string>
    <string name="login_text">登录</string>

    <string name="register_tv_user_name">用 户 名：</string>
    <string name="register_tv_pwd">密    码:</string>
    <string name="register_tv_pwd2">重复密码：</string>
    <string name="register_et_user_name">请输入您的用户名</string>
    <string name="register_et_pwd">请输入您的密码</string>
    <string name="register_et_pwd2">请再次输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="reg_reging">正在注册...</string>
    <string name="reg_text">注册</string>
    <string name="navigation_logout">退出登录</string>
    <string name="map_no_friends">附近暂无图友</string>
</resources>
