<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8FFC1"
        android:padding="6dp"
        tools:context="com.lulu.tuyou.view.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@mipmap/ic_app"/>

            <android.support.v7.widget.CardView
                android:id="@+id/reg_cv_username"
                style="@style/register_card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reg_tv_username"
                        android:layout_width="@dimen/register_card_left_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/register_tv_user_name"/>

                    <EditText
                        android:id="@+id/reg_et_username"
                        style="@style/register_edit_text"
                        android:hint="@string/register_et_user_name"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/reg_cv_password"
                style="@style/register_card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/reg_tv_password"
                        android:layout_width="@dimen/register_card_left_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/register_tv_pwd"/>

                    <EditText
                        android:id="@+id/reg_et_password"
                        style="@style/register_edit_text"
                        android:hint="@string/register_et_pwd"
                        android:inputType="textPassword"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/reg_cv_password2"
                style="@style/register_card_view">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/reg_tv_password2"
                        android:layout_width="@dimen/register_card_left_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/register_tv_pwd2"/>
                    <EditText
                        android:id="@+id/reg_et_password2"
                        style="@style/register_edit_text"
                        android:hint="@string/register_et_pwd2"
                        android:inputType="textPassword"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/reg_btn_register"
                style="@style/login_register_btn"
                android:text="注    册"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>

