<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lulu.tuyou.view.TuYouActivity">

    <data>

        <variable
            name="eventTuyou"
            type="com.lulu.tuyou.view.event_handler.EventTuYou"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.DrawerLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/tuyou_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <RadioGroup
                    android:id="@+id/main_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/main_rb_msg"
                        style="@style/RadioGroupStyle"
                        android:drawableTop="@mipmap/ic_chat"
                        android:onClick="@{eventTuyou.clickBottomNavigation}"
                        android:text="@string/bottom_navgation_msg"
                        />

                    <RadioButton
                        android:id="@+id/main_rb_map"
                        style="@style/RadioGroupStyle"
                        android:drawableTop="@mipmap/ic_map"
                        android:onClick="@{eventTuyou.clickBottomNavigation}"
                        android:text="@string/bottom_navgation_map"/>

                    <RadioButton
                        android:id="@+id/main_rb_circle"
                        style="@style/RadioGroupStyle"
                        android:drawableTop="@mipmap/ic_circle"
                        android:onClick="@{eventTuyou.clickBottomNavigation}"
                        android:text="@string/bottom_navgation_circle"/>
                </RadioGroup>
            </LinearLayout>

            <android.support.design.widget.NavigationView
                android:id="@+id/main_navigation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/colorWrite"
                android:overScrollMode="never"
                app:headerLayout="@layout/navigation_header_login"
                app:itemTextColor="@color/sel_nav_color"
                app:menu="@menu/menu_navigation"
                />
        </android.support.v4.widget.DrawerLayout>


    </LinearLayout>
</layout>